--- a/app/Resources/views/printer/index.html.twig
+++ b/app/Resources/views/printer/index.html.twig
@@ -41,4 +41,5 @@
       <div class="panel-body">Il n'y a pas d'imprimantes en service pour le moment</div>
     </div>
    {%endif%}
+   <a href="{{ path('addprinterpage') }}">add Printers</a>
 {% endblock %}
