--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -32,7 +32,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Accueil</a></li>
         <li><a href="{{ path('printerpage') }}">Imprimante</a></li>
-        <li><a href="#">Cartouche</a></li> 
+        <li><a href="{{ path('cartridgepage') }}">Cartouche</a></li> 
         <li><a href="#">Page 3</a></li> 
       </ul>
       <ul class="nav navbar-nav navbar-right">
