--- a/app/Resources/views/cartridge/index.html.twig
+++ b/app/Resources/views/cartridge/index.html.twig
@@ -16,7 +16,7 @@
             <th>Quantite</th>
             <th>Date de réapprovisionnement</th>
             <th>Modele Imprimante</th>
-            <th>Status de commande</th>
+            <th>Commande en cours ?</th>
       </tr>
    </thead>
    <tbody>
@@ -52,6 +52,8 @@
                                 </div><!-- /.modal-content -->
                             </div><!-- /.modal-dialog -->
                         </div><!-- /.modal -->
+                        <a class="btn btn-warning btn-xs" href="{{ path('commandecartridgepage', { 'id': cartridge.id }) }}" title="Commande"><span class="glyphicon glyphicon-shopping-cart"></span> Commander
+                        </a>
     </td>
     
    </tr>
@@ -66,5 +68,5 @@
       <div class="panel-body">Il n'y a pas de cartouche en stock</div>
     </div>
    {%endif%}
-   <a href="{{ path('addcartridgepage') }}" class="btn btn-primary" ><span class="glyphicon glyphicon-print"></span> Ajouter une Imprimante</a>
+   <a href="{{ path('addcartridgepage') }}" class="btn btn-primary" ><span class="glyphicon glyphicon-plus"></span> Ajouter une Cartouche</a>
 {% endblock %}
