--- a/app/Resources/views/cartridge/index.html.twig
+++ b/app/Resources/views/cartridge/index.html.twig
@@ -28,7 +28,7 @@
     <td>{{cartridge.quantite}}</td>
     <td>{% if cartridge.reapprovisionnement %}{{cartridge.reapprovisionnement|date("m/d/Y")}}{% else %} Pas d'ajout{% endif%}</td>
     <td>{% for printer in cartridge.printers %}
-      {{ printer.modele }}{% if not loop.last %}, {% endif %}
+      {{ printer.modele }}({{printer.localisation}}){% if not loop.last %}, {% endif %}
     {% endfor %}</td>
     <td>{% if cartridge.statuscommande %} Commande en cours{% else %}Pas de commande en cours{% endif%}</td>
     <td><a href="{{ path('editcartridgepage', { 'id': cartridge.id }) }}" class="btn btn-info btn-xs" title="Edit"><span class="glyphicon glyphicon-edit"></span>
