--- a/app/Resources/views/printer/index.html.twig
+++ b/app/Resources/views/printer/index.html.twig
@@ -17,6 +17,9 @@
             <th>Adresse Ip</th>
             <th>Date d'achat</th>
             <th>garantie</th>
+            <th>cartouche noir</th>
+            <th>cartouche cyan</th>
+            <th>cartouche rouge</th>
       </tr>
    </thead>
    <tbody>
@@ -29,6 +32,15 @@
     <td><a href="http://{{printer.adresseip}}">{{printer.adresseip}}</a></td>
     <td>{{printer.dateachat|date("m/d/Y")}}</td>
     <td>{{printer.garantie}} ans</td>
+    <td>Remplacée {{printer.black}} fois <a href="{{ path('cartridgereplace', { 'id': printer.id, 'slug':'black' }) }}" class="btn btn-info btn-xs" title="Edit"><span class="glyphicon glyphicon-plus"></span>
+    </a> <a href="{{ path('cartridgereplaceback', { 'id': printer.id, 'slug':'black' }) }}" class="btn btn-danger btn-xs" title="Edit"><span class="glyphicon glyphicon-minus"></span>
+    </a></td>
+    <td>Remplacée {{printer.cyan}} fois<a href="{{ path('cartridgereplace', { 'id': printer.id, 'slug':'cyan' }) }}" class="btn btn-info btn-xs" title="Edit"><span class="glyphicon glyphicon-plus"></span>
+    </a> <a href="{{ path('cartridgereplaceback', { 'id': printer.id, 'slug':'cyan' }) }}" class="btn btn-danger btn-xs" title="Edit"><span class="glyphicon glyphicon-minus"></span>
+    </a></td>
+    <td>Remplacée {{printer.red}} fois<a href="{{ path('cartridgereplace', { 'id': printer.id, 'slug':'red' }) }}" class="btn btn-info btn-xs" title="Edit"><span class="glyphicon glyphicon-plus"></span>
+    </a> <a href="{{ path('cartridgereplaceback', { 'id': printer.id, 'slug':'red' }) }}" class="btn btn-danger btn-xs" title="Edit"><span class="glyphicon glyphicon-minus"></span>
+    </a></td>
     <td>
     <a href="{{ path('editprinterpage', { 'id': printer.id }) }}" class="btn btn-info btn-xs" title="Edit"><span class="glyphicon glyphicon-edit"></span>
     </a>
