--- a/app/Resources/views/printer/index.html.twig
+++ b/app/Resources/views/printer/index.html.twig
@@ -80,4 +80,27 @@
     </div>
    {%endif%}
    <a href="{{ path('addprinterpage') }}" class="btn btn-primary" ><span class="glyphicon glyphicon-print"></span> Ajouter une Imprimante</a>
+    <ul class="list-group">
+ 
+   {% for printer in printers %}
+   {% if (printer.black >=3) or (printer.red >=3) or (printer.cyan >=3)  %}
+   <h4 name="titreAlerte">{{printer.marque}} {{printer.modele}} en {{printer.localisation}} </h4>
+   {% endif %}
+   {% if printer.black >=3 %}
+
+  <li class="list-group-item list-group-item-danger">Surconsommation de cartouche NOIR</li>
+  {% endif %}
+  {% if printer.red >=3 %}
+  <li class="list-group-item list-group-item-danger">Surconsommation de cartouche ROUGE</li>
+  {% endif %}
+  {% if printer.cyan >=3 %}
+  <li class="list-group-item list-group-item-danger">Surconsommation de cartouche BLEU</li>
+  {% endif %}
+
+   
+{% endfor%}
+      </ul>
+    
 {% endblock %}
+
+
