--- a/app/Resources/views/cartridge/index.html.twig
+++ b/app/Resources/views/cartridge/index.html.twig
@@ -79,6 +79,22 @@
     </div>
    {%endif%}
    <a href="{{ path('addcartridgepage') }}" class="btn btn-primary" ><span class="glyphicon glyphicon-plus"></span> Ajouter une Cartouche</a>
+
+    <ul class="list-group">
+ 
+   {% for cartridge in cartridges %}
+   {% if (cartridge.quantite < 5 and cartridge.quantite >= 3) or (cartridge.quantite < 3) %}
+   <h4 name="titreAlerte">{{cartridge.modele}} {{cartridge.type}}</h4>
+   {% endif %}
+   {% if cartridge.quantite < 5 and cartridge.quantite >= 3 %}
+
+  <li class="list-group-item list-group-item-warning">Attention Stock de Cartouche inférieur à 5</li>
+  {% endif %}
+  {% if cartridge.quantite < 3 %}
+  <li class="list-group-item list-group-item-danger">Attention Stock de Cartouche inférieur à 3, COMMANDE URGENTE</li>
+  {% endif %} 
+{% endfor%}
+      </ul>
 {% endblock %}
 
 {% block javascripts %}
