--- a/app/Resources/views/cartridge/index.html.twig
+++ b/app/Resources/views/cartridge/index.html.twig
@@ -25,7 +25,8 @@
     <td>{{cartridge.marque}}</td>
     <td>{{cartridge.modele}}</td>
     <td>{{cartridge.type}}</td>
-    <td>{{cartridge.quantite}} {% if cartridge.quantite < 5 and cartridge.quantite >= 3  %}<span class=" glyphicon glyphicon-exclamation-sign"></span>{% endif%} {% if cartridge.quantite < 3 %}<span class="   glyphicon glyphicon-tint"></span>{% endif%}</td>
+    <td>{{cartridge.quantite}} {% if cartridge.quantite < 5 and cartridge.quantite >= 3  %}<span class=" glyphicon glyphicon-exclamation-sign"></span>{% endif%} {% if cartridge.quantite < 3 %}<span class="   glyphicon glyphicon-tint"></span>{% endif%}<a href="{{ path('takecartridge', { 'id': cartridge.id }) }}" class="btn btn-info btn-xs" title="Edit"><span class="glyphicon glyphicon-minus"></span>
+    </a></td>
     <td>{% if cartridge.reapprovisionnement %}{{cartridge.reapprovisionnement|date("m/d/Y")}}{% else %} Pas d'ajout{% endif%}</td>
     <td>{% for printer in cartridge.printers %}
       {{ printer.modele }}({{printer.localisation}}){% if not loop.last %}, {% endif %}
