amelioration alerte imprimantes

--- a/app/Resources/views/cartridge/index.html.twig
+++ b/app/Resources/views/cartridge/index.html.twig
@@ -3,8 +3,8 @@
 {% block content %}
 {%if cartridges %}
 <div class="tab-content">
-  <div id="cartridges" class="tab-pane fade in active">
-    <table class="table table-bordered table-striped table-condensed">
+  <div id="cartridges" class="tab-pane fade in active table-responsive">
+    <table class="table table-bordered table-striped">
    <caption>
       <h4>Cartouches en stock</h4>
    </caption>
