--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,7 +30,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Accueil</a></li>
+        <li class="active"><a href="{{ path('homepage') }}">Accueil</a></li>
         <li><a href="{{ path('printerpage') }}">Imprimante</a></li>
         <li><a href="{{ path('cartridgepage') }}">Cartouche</a></li> 
         <li><a href="#">Page 3</a></li> 
