--- a/app/Resources/views/cartridge/index.html.twig
+++ b/app/Resources/views/cartridge/index.html.twig
@@ -17,6 +17,7 @@
             <th>Date de réapprovisionnement</th>
             <th>Modele Imprimante</th>
             <th>Commande en cours ?</th>
+            <th><em class="fa fa-cog"></em></th>
       </tr>
    </thead>
    <tbody>
@@ -32,9 +33,9 @@
       {{ printer.modele }}({{printer.localisation}}){% if not loop.last %}, {% endif %}
     {% endfor %}</td>
     <td>{% if cartridge.statuscommande %} Commande en cours{% else %}Pas de commande en cours{% endif%}</td>
-    <td><a href="{{ path('editcartridgepage', { 'id': cartridge.id }) }}" class="btn btn-info btn-xs" title="Edit"><span class="glyphicon glyphicon-edit"></span>
+    <td><a href="{{ path('editcartridgepage', { 'id': cartridge.id }) }}" class="btn btn-info btn-xs" title="Edit"><em class="fa fa-pencil"></em>
     </a>
-    <button type="button" class="btn btn-danger btn-xs" title="Delete" data-toggle="modal" data-target="#cartridgeDialog{{ cartridge.id }}"><span class="glyphicon glyphicon-remove"></span>
+    <button type="button" class="btn btn-danger btn-xs" title="Delete" data-toggle="modal" data-target="#cartridgeDialog{{ cartridge.id }}"><em class="fa fa-trash"></em>
                         </button>
                         <div class="modal fade" id="cartridgeDialog{{ cartridge.id }}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                             <div class="modal-dialog">
