--- a/web/css/home.css
+++ b/web/css/home.css
@@ -18,21 +18,43 @@ body {
 	margin-top: 20px;
 }
 
-.adminTable {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
 
-[class*="col-"] {
+
+#dashboardPrinter {
   background-color: lightgreen;
-  border: 2px solid black;
-  border-radius: 6px;
+  border: 2px inset black;
+  border-radius: 5px;
   line-height: 40px;
   text-align: center;
+   box-shadow: 4px 4px 8px black;
+
+   background: rgba(147,206,222,1);
+    background: -moz-linear-gradient(top, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(147,206,222,1)), color-stop(41%, rgba(117,189,209,1)), color-stop(100%, rgba(73,165,191,1)));
+    background: -webkit-linear-gradient(top, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+    background: -o-linear-gradient(top, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+    background: -ms-linear-gradient(top, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+    background: linear-gradient(to bottom, rgba(147,206,222,1) 0%, rgba(117,189,209,1) 41%, rgba(73,165,191,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf', GradientType=0 );
+
 }
+
+#dashboardCartouche{
+background-color: lightgreen;
+  border: 2px inset black;
+  border-radius: 5px;
+  line-height: 40px;
+  text-align: center;
+   box-shadow: 4px 4px 8px black;
+}
+
+
 
 .container {
 
 	margin-top: 10px;
 }
 
+.panel-body{
+  padding: 0;
+}
