--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -18,7 +18,7 @@
 			{% endif %}
 			{% endfor %}
 			{% if nbPrint > 0 %}
-				<a href="{{ path('printerpage') }}" class="btn btn-warning">Imprimante en surconsommation <span class="badge text-success">{{nbPrint}}</span></a>
+				<a href="{{ path('printerpage') }}" class="btn btn-warning btnSurconsommation">Imprimante en surconsommation <span class="badge text-success">{{nbPrint}}</span></a>
 			{% endif %}
 		</div>
 	{% else %}
@@ -50,7 +50,7 @@
 					      <tr data-quantite={{cartridge.quantite}}>
 					      	<td>{{cartridge.marque}}</td>
 					        <td>{{cartridge.modele}}</td>
-					        <td>{{cartridge.quantite}} {% if cartridge.quantite < 5 and cartridge.quantite >= 3  %} <span class=" glyphicon glyphicon-exclamation-sign"></span>{% endif%} {% if cartridge.quantite < 3 %} <span class="fa fa-exclamation-triangle"></span><span class="fa fa-exclamation-triangle"></span>{% endif%}</td>
+					        <td>{{cartridge.quantite}} {% if cartridge.quantite < 5 and cartridge.quantite >= 3  %} <span class=" glyphicon glyphicon-exclamation-sign"></span> <a href="{{ path('cartridgepage') }}" class="btn btn-warning btnLow">Niveau stock bas <span class="fa fa-chevron-right"></span></a>{% endif%} {% if cartridge.quantite < 3 %} <span class="fa fa-exclamation-triangle"></span><span class="fa fa-exclamation-triangle"></span> <a href="{{ path('cartridgepage') }}" class="btn btn-danger btnVeryLow">Niveau stock très bas <span class="fa fa-chevron-right"></a>{% endif%}</td>
 					      </tr>
 					      {% endfor %}
 					    </tbody>
