--- a/app/Resources/views/printer/index.html.twig
+++ b/app/Resources/views/printer/index.html.twig
@@ -82,9 +82,11 @@
     </div>
    {%endif%}
    <a href="{{ path('addprinterpage') }}" class="btn btn-primary" ><span class="glyphicon glyphicon-print"></span> Ajouter une Imprimante</a>
-    <ul class="list-group">
+  <div id="content-list">
+  {% for printer in printers %}
+  <ul class="list-group">
  
-   {% for printer in printers %}
+   
    {% if (printer.black >=3) or (printer.red >=3) or (printer.cyan >=3)  %}
    <h4 name="titreAlerte">{{printer.marque}} {{printer.modele}} en {{printer.localisation}} </h4>
    {% endif %}
@@ -98,11 +100,10 @@
   {% if printer.cyan >=3 %}
   <li class="list-group-item list-group-item-danger">Surconsommation de cartouche BLEU</li>
   {% endif %}
-
-   
-{% endfor%}
       </ul>
-    
+      {% endfor%}
+      </div>
+     <div id="page_navigation"> </div>
 {% endblock %}
 
 {% block javascripts %}
@@ -120,6 +121,56 @@
       });
     });
     </script>
+
+    <script> 
+
+    var show_per_page = 2; 
+    var current_page = 0;
+
+    function set_display(first, last) {
+      $('#content-list').children().css('display', 'none');
+      $('#content-list').children().slice(first, last).css('display', 'block');
+    }
+
+    function previous(){
+        if($('.active').prev('.page_link').length) go_to_page(current_page - 1);
+    }
+
+    function next(){
+        if($('.active').next('.page_link').length) go_to_page(current_page + 1);
+    }
+
+    function go_to_page(page_num){
+      current_page = page_num;
+      start_from = current_page * show_per_page;
+      end_on = start_from + show_per_page;
+      set_display(start_from, end_on);
+      $('.active').removeClass('active');
+      $('#id' + page_num).addClass('active');
+    }  
+
+    $(document).ready(function() {
+
+      
+      var number_of_pages = Math.ceil($('#content-list').children().length / show_per_page);
+
+      var nav = '<ul class="pagination"><li><a href="javascript:previous();">&laquo;</a>';
+
+      var i = -1;
+      while(number_of_pages > ++i){
+        nav += '<li class="page_link'
+        if(!i) nav += ' active';
+        nav += '" id="id' + i +'">';
+        nav += '<a href="javascript:go_to_page(' + i +')">'+ (i + 1) +'</a>';
+      }
+      nav += '<li><a href="javascript:next();">&raquo;</a></ul>';
+
+      $('#page_navigation').html(nav);
+      set_display(0, show_per_page);
+      
+    });
+
+  </script>
   {% endblock %}
 
 
